--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "run": "node dist/index.js"
+    "start": "ts-node index.ts"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
     "fastify": "^2.14.0",
     "fastify-multer": "^1.5.3",
+    "hashids": "^2.2.1",
     "mime-types": "^2.1.27",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
