Finished Upload Code
* Changed .eslintrc.json to use `npx eslint --init`
* Hashid minimum hash is 8
* Enabled emitDecoratorMetadata

Database:
* Set `filename` max to 50
* Set `urlpath` to nullable

Signed-off-by: Christopher Angelo <angelo@angeloanan.xyz>

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+HOST= # Domain name - This will be used to prefix the URL; ${HOST}/<hashid>
+SALT= # Hashids Salt
+
 DB_TYPE= # 'mariadb', 'mysql', 'postgres', etc...
 DB_HOST= # IP / Hostname of DB
 DB_PORT= # Port of DB
