--- a/package.json
+++ b/package.json
@@ -15,22 +15,25 @@
     "fastify-multer": "^1.5.3",
     "hashids": "^2.2.1",
     "mime-types": "^2.1.27",
-    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.24",
     "typescript": "^3.8.3"
+  },
+  "peerDependencies": {
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@types/mime-types": "^2.1.0",
     "@types/node": "^13.13.4",
     "@types/uuid": "^7.0.3",
-    "@typescript-eslint/eslint-plugin": "2",
-    "eslint": "6",
-    "eslint-config-standard-with-typescript": "^16.0.0",
-    "eslint-plugin-import": "2",
-    "eslint-plugin-node": "11",
-    "eslint-plugin-promise": "4",
-    "eslint-plugin-standard": "4",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "ts-node": "^8.9.1"
   }
 }
