feat: missing vars in .env.example
Signed-off-by: Christopher Angelo <angelo@angeloanan.xyz>

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,22 @@
-HOST= # Domain name - This will be used to prefix the URL; ${HOST}/<hashid>
-SALT= # Hashids Salt
 
-DB_TYPE= # 'mariadb', 'mysql', 'postgres', etc...
-DB_HOST= # IP / Hostname of DB
-DB_PORT= # Port of DB
-DB_USER= # Username
-DB_PASS= # Password
-DB_NAME= # Database Name
+# Domain name - This will be used to prefix the URL; ${HOST}/<hashid>
+HOST = localhost:8080
+# Webserver Port - Which port to listen to
+PORT = 8080
+# Hashids Salt
+SALT= "Some Random Salt."
+
+# Database
+
+# TypeORM DB Type - mysql, mariadb, postgres, cockroachdb, sqlite, mssql, oracle, cordova, nativescript, react-native, expo, or mongodb
+DB_TYPE= mariadb
+# IP / Hostname of DB
+DB_HOST= 0.0.0.0
+# Port of DB
+DB_PORT= 42069
+# Username
+DB_USER= 
+# Password
+DB_PASS= 
+# Database Name
+DB_NAME= 
