feat(upload): Authorization header
Signed-off-by: Christopher Angelo <angelo@angeloanan.xyz>

--- a/.env.example
+++ b/.env.example
@@ -4,19 +4,21 @@ HOST = localhost:8080
 # Webserver Port - Which port to listen to
 PORT = 8080
 # Hashids Salt
-SALT= "Some Random Salt."
+SALT = "Some Random Salt."
+# /upload Authorization Header - Make this some long unguessed string
+AUTH = 6f951dfa4fad592d261178678dcf7b98
 
 # Database
 
 # TypeORM DB Type - mysql, mariadb, postgres, cockroachdb, sqlite, mssql, oracle, cordova, nativescript, react-native, expo, or mongodb
-DB_TYPE= mariadb
+DB_TYPE = mariadb
 # IP / Hostname of DB
-DB_HOST= 0.0.0.0
+DB_HOST = 0.0.0.0
 # Port of DB
-DB_PORT= 42069
+DB_PORT = 42069
 # Username
-DB_USER= 
+DB_USER = 
 # Password
-DB_PASS= 
+DB_PASS = 
 # Database Name
-DB_NAME= 
+DB_NAME = 
