--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
     "fastify-multer": "^1.5.3",
     "hashids": "^2.2.1",
     "mime-types": "^2.1.27",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.24",
     "typescript": "^3.8.3"
-  },
-  "peerDependencies": {
-    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@types/mime-types": "^2.1.0",
