feat(docker): Dockerfile and .dockerignore
Signed-off-by: Christopher Angelo <angelo@angeloanan.xyz>

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 
 # Domain name - This will be used to prefix the URL; ${HOST}/<hashid>
-HOST = localhost:8080
-# Webserver Port - Which port to listen to
-PORT = 8080
+HOST = localhost:42069
+# Webserver Port (Default: 42069) - DO NOT CHANGE IF RUNNING ON DOCKER
+PORT = 42069
 # Hashids Salt
 SALT = "Some Random Salt."
 # /upload Authorization Header - Make this some long unguessed string
