--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "fastify-favicon": "^2.0.0",
     "fastify-multer": "^1.5.3",
     "hashids": "^2.2.1",
+    "imagemin": "^7.0.1",
+    "imagemin-webp": "^5.1.0",
     "mime-types": "^2.1.27",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
@@ -22,6 +24,7 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@types/imagemin-webp": "^5.1.0",
     "@types/mime-types": "^2.1.0",
     "@types/node": "^13.13.4",
     "@types/uuid": "^7.0.3",
