--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "ts-node index.ts"
   },
   "dependencies": {
+    "@prisma/client": "2.21.1",
     "dotenv": "^8.2.0",
     "fastify": "^2.15.1",
     "fastify-favicon": "^2.0.0",
@@ -33,7 +34,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "prisma": "^2.21.1",
+    "prisma": "2.21.1",
     "ts-node": "^8.10.2"
   }
 }
