--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Christopher Angelo<angelo@angeloanan.xyz>",
   "license": "MIT",
   "scripts": {
+    "postinstall": "yarn prisma generate",
     "build": "tsc -p tsconfig.json",
     "start": "ts-node index.ts"
   },
@@ -13,19 +14,18 @@
     "@prisma/client": "2.21.1",
     "dotenv": "^8.2.0",
     "fastify": "^3.14.2",
-    "fastify-favicon": "^2.0.0",
-    "fastify-multer": "^1.5.3",
+    "fastify-favicon": "^3.1.0",
+    "fastify-multer": "^2.0.2",
     "hashids": "^2.2.1",
     "mime-types": "^2.1.27",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.26",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@types/mime-types": "^2.1.0",
     "@types/node": "^14.0.5",
-    "@types/uuid": "^7.0.3",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.34.0",
     "eslint": "^6.8.0",
@@ -34,7 +34,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "prisma": "2.21.1",
-    "ts-node": "^8.10.2"
+    "prisma": "2.21.1"
   }
 }
